--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
 group 'elk-web'
 buildscript {
     repositories {
-        mavenCentral()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.+")
         classpath 'org.flywaydb:flyway-gradle-plugin:3.2.+'
     }
 }
-
+allprojects {
+    repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    }
+}
 apply plugin: 'java'
 apply plugin: 'spring-boot'
 apply plugin: 'idea'
