--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     compile("redis.clients:jedis:2.7.3")
     compile("com.alibaba:fastjson:1.2.24")
     compile("com.alibaba:druid:1.0.+")
+    compile("us.codecraft:webmagic-core:0.6.1")
+    compile("us.codecraft:webmagic-extension:0.6.1")
+    compile("org.jsoup:jsoup:1.7.2")
     runtime("mysql:mysql-connector-java:5.1.40")
     testCompile("org.springframework.boot:spring-boot-starter-test:1.3.5.RELEASE")
     testCompile group: 'junit', name: 'junit', version: '4.11'
